added patch for sockets

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
     
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/min/production.min.css">
     <!--STYLES END-->
   </head>
 
@@ -29,7 +29,7 @@
 
 
     <!--SCRIPTS-->
-    <script src="/dependencies/sails.io.js"></script>
+    <script src="/min/production.min.js"></script>
     <!--SCRIPTS END-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
